# claude-review

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  hatch_build.py  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/lib/components/: CommentBox.svelte  CommentThread.svelte  ContentViewToggle.svelte  DiffView.svelte  FileList.svelte  MarkdownRenderer.svelte  PreviewView.svelte  RawView.svelte  ReviewModal.svelte  SideBySideView.svelte  SubmitBar.svelte  ThemeToggle.svelte
frontend/src/lib/stores/: comments.svelte.ts  diff.svelte.ts
frontend/src/lib/types/: index.ts
frontend/src/lib/utils/: highlight.ts  line-selection.svelte.ts  renderable.ts
frontend/src/styles/: main.css
frontend/tests/: comments.test.ts  diff-store.test.ts
frontend/tests/components/: comment-box.test.ts  content-view-toggle.test.ts  diff-view.test.ts  file-list.test.ts  markdown-renderer.test.ts  review-modal.test.ts  submit-bar.test.ts
plugin/.claude-plugin/: plugin.json
plugin/commands/: review-ui.md  review.md
skills/review-ui/: SKILL.md
src/claude_review/: __main__.py  cli.py
src/claude_review/domain/: exceptions.py  models.py  protocols.py
src/claude_review/presentation/: app.py  dependencies.py  routes.py  schemas.py  state.py
src/claude_review/repositories/: git_repository.py
src/claude_review/services/: diff_service.py  review_service.py  text_file_service.py  transcript_review_service.py  transcript_service.py
tests/: conftest.py  helpers.py
tests/e2e/: test_review_flow.py
tests/integration/: test_diff_service.py  test_git_repository.py  test_routes.py
tests/unit/: test_cli.py  test_review_service.py  test_text_file_service.py  test_transcript_review_service.py  test_transcript_service.py
